--- a/landingPage/public/index.html
+++ b/landingPage/public/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>dizzi</title>
-    <link rel="icon" href="img/favicon.png" />
+    <title>$chmo$</title>
+    <link rel="icon" href="img/favicon.ico" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- animate CSS -->
@@ -62,7 +62,6 @@
               <div class="social_icon d-none d-lg-block">
                 <a href="#"><i class="ti-facebook"></i></a>
                 <a href="#"><i class="ti-twitter-alt"></i></a>
-                <a href="#"><i class="ti-dribbble"></i></a>
                 <a href="#"><i class="ti-instagram"></i></a>
               </div>
             </nav>
@@ -225,7 +224,7 @@
             <div class="review_part_text owl-carousel">
               <div class="singler_eview_part">
                 <div class="client_info">
-                  <img src="img/client_1.png" alt="" />
+                  <img src="img/testimonial_img_1.png" alt="" />
                   <h4>Matt Sembinelli</h4>
                   <p>Self Employed Professional</p>
                 </div>
@@ -235,7 +234,7 @@
               </div>
               <div class="singler_eview_part">
                 <div class="client_info">
-                  <img src="img/client_2.png" alt="" />
+                  <img src="img/testimonial_img_2.png" alt="" />
                   <h4>Curtis Strange</h4>
                   <p>Bank Teller / Golfer</p>
                 </div>
@@ -245,7 +244,7 @@
               </div>
               <div class="singler_eview_part">
                 <div class="client_info">
-                  <img src="img/client_1.png" alt="" />
+                  <img src="img/testimonial_img_3.png" alt="" />
                   <h4>Jane Smith</h4>
                   <p>Mom of $chmo$ Co-Founder</p>
                 </div>
@@ -283,7 +282,7 @@
           <div class="col-sm-6 col-md-3 col-xl-3">
             <div class="single-footer-widget footer_1">
               <a href="index.html">
-                <h2 style="color:blue">$CHMO$<strong style="color:orange">.</strong></h2>
+                <h2 style="color:rs#0042ff">$CHMO$<strong style="color:orange">.</strong></h2>
               </a>
               <ul>
                 <li><a href="#">Work</a></li>
@@ -293,7 +292,6 @@
               <div class="social_icon">
                 <a href="#"><i class="ti-facebook"></i></a>
                 <a href="#"><i class="ti-twitter-alt"></i></a>
-                <a href="#"><i class="ti-dribbble"></i></a>
                 <a href="#"><i class="ti-instagram"></i></a>
               </div>
             </div>
@@ -319,7 +317,7 @@
               <div class="single_contact_info">
                 <h3>Calgary - Canada</h3>
                 <p>630 8 Ave SW #600, Calgary, AB T2P 1G6</p>
-                <p>1-8-SAVING-IS-HARD</p>
+                <p>1-SAVING-IS-HARD</p>
               </div>
             </div>
           </div>
