--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Economica:400,400i,700,700i|Ubuntu+Mono&display=swap"
+      rel="stylesheet">
+    <title>$chmo$ - truly shares your best interest.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
