cosmetic changes in landing page and customer change in client

--- a/landingPage/public/index.html
+++ b/landingPage/public/index.html
@@ -7,7 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>$chmo$</title>
+    <link href="https://fonts.googleapis.com/css?family=Economica:400,400i,700,700i|Ubuntu+Mono&display=swap"
+      rel="stylesheet">
+    <title>$chmo$ - achieve financial goals</title>
     <link rel="icon" href="img/favicon.ico" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -55,7 +57,7 @@
               >
                 <ul class="navbar-nav align-items-center">
                   <li class="nav-item">
-                    <a style="width: 100px" class="btn_1 nav-link" href="http://localhost:3000">Sign In</a>
+                    <a class="nav-link" href="http://localhost:3000">Sign In</a>
                   </li>
                 </ul>
               </div>
@@ -78,8 +80,9 @@
           <div class="col-lg-6 offset-lg-1">
             <div class="banner_text">
               <div class="banner_text_iner">
-                <h1>Saving is hard.</h1>
+                <h1 style="text-transform: none;">Saving is hard.</h1>
                 <h5>...or is it?</h5>
+                <a class="btn_1" href="http://localhost:3000">Click to find out</a>
               </div>
             </div>
           </div>
@@ -197,7 +200,7 @@
           </div>
           <div class="col-md-6 col-xl-4">
             <div class="creative_part_text">
-              <h2>We have your best interest at hearts.</h2>
+              <h2>We have your best interest at heart.</h2>
               <p>
                 No limits to your savings.
               </p>
